--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -162,7 +162,7 @@
                     <div class="menu-item" id="menu-{{ item.id }}">
                         {% if item.menu_image %}
                             <!-- 이미지가 있는 경우: 이미지만 표시 -->
-                            <img src="{{ item.menu_image.url }}" alt="{{ item.name }}" class="menu-only-image">
+                            <img src="{{ item.menu_image.url }}" alt="{{ item.name }}" class="menu-only-image" loading="lazy" decoding="async">
                         {% else %}
                             <!-- 이미지가 없는 경우: 텍스트 정보 표시 -->
                             <div class="menu-content">
