--- a/menu_project/menu/templates/menu/menu_main.html
+++ b/menu_project/menu/templates/menu/menu_main.html
@@ -40,10 +40,13 @@
                 {% for category in categories %}
                     {% if not category.category_image %}
                     <li class="top-category">
-                        <div class="category-header" onclick="toggleCategory({{ category.id }})">
+                        <div class="category-header" {% if category.sub_categories.exists %}onclick="toggleCategory({{ category.id }})"{% endif %}>
+                            {% if category.sub_categories.exists %}
                             <span class="toggle-icon" id="icon-{{ category.id }}">▶</span>
+                            {% endif %}
                             <a href="{% url 'menu:menu_list' category.id %}">{{ category.name }}</a>
                         </div>
+                        {% if category.sub_categories.exists %}
                         <ul class="sub-categories" id="sub-{{ category.id }}" style="display: none;">
                             {% for sub_cat in category.sub_categories.all %}
                                 {% if not sub_cat.category_image %}
@@ -51,6 +54,7 @@
                                 {% endif %}
                             {% endfor %}
                         </ul>
+                        {% endif %}
                     </li>
                     {% endif %}
                 {% endfor %}
