UI: Force vertical layout for category grid on all screen sizes

--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -349,7 +349,7 @@
 
 .category-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr;
     gap: 0;
     margin-top: 0px;
 }
