--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -17,7 +17,7 @@
         .background-with-gradient {
             background: url('{{ site_settings.side_image.url }}');
             background-size: cover;
-            background-position: center center;
+            background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
             position: fixed;
