--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -48,6 +48,7 @@
     flex-direction: column;
     background: rgba(0, 0, 0, 0.95);
     border-radius: 8px;
+    border: 3px solid #000;
     padding: 0;
     max-height: 400px;
     backdrop-filter: blur(10px);
@@ -150,7 +151,7 @@
     background: rgba(0, 0, 0, 1);
     z-index: 1002;
     transition: right 0.3s ease;
-    border-left: 1px solid rgba(0, 0, 0, 1);
+    border-left: 3px solid #000;
     overflow-y: auto;
 }
 
