UI: Add white gradient overlay to background images

--- a/menu_project/menu/templates/menu/category_list.html
+++ b/menu_project/menu/templates/menu/category_list.html
@@ -14,7 +14,7 @@
     {% if site_settings and site_settings.side_image %}
     <style>
         .background-with-gradient {
-            background: url('{{ site_settings.side_image.url }}');
+            background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0.3) 70%, rgba(255,255,255,0.8) 100%), url('{{ site_settings.side_image.url }}');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
