--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -182,7 +182,7 @@
                                 <p class="menu-notes">{{ item.notes }}</p>
                                 {% endif %}
                                 
-                                <div class="menu-price">₩{{ item.price|floatformat:0 }}</div>
+                                <div class="menu-price">{{ item.price|floatformat:"-2" }}</div>
                             </div>
                         {% endif %}
                     </div>
